# aws-ecs-exec-command-cli

./: .gitignore  README.md  helpers.py  main.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: 01_tests.yml  02_autotag.yml  02_release.yml  03_publish.yml  03_release.yml  autotag.yml  publish.yml  release.yml  setup_poetry.yml  tests.yml
.test-home/.ecs-connect/: config.toml
ecs_connect/: __init__.py  __main__.py  choice_menu.py  cli.py  credentials.py  helpers.py  menu.py  session.py
ecs_connect_cli/: __init__.py  __main__.py  cli.py  helpers.py  menu.py  session.py
tests/: conftest.py  test_cli_commands.py  test_ecs_connect.py  test_helpers_utils.py
tests/integration/: test_ministack_helpers.py
