[project]
name = "ecs_connect_cli"
dynamic = ["version"]
authors = [
  { name="Frederic Egmorte", email="frederic.egmorte@gmail.com" },
]
description = "AWS ECS Cli tool for connecting to ecs container and update secret manager"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/fegmorte/aws-ecs-exec-command-cli"
Issues = "https://github.com/fegmorte/aws-ecs-exec-command-cli/issues"

[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools-git-versioning<2"]
build-backend = "setuptools.build_meta"

[tool.setuptools-git-versioning]
enabled = true
starting_version = "1.8.0"