[tool.poetry]
name = "ecs_connect_cli"
version = "0.0.0"
description = "AWS ECS Cli tool for connecting to ecs container and update secret manager"
authors = ["Frederic Egmorte <frederic.egmorte@gmail.com>"]
license = "MIT License"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
repository = "https://github.com/fegmorte/aws-ecs-exec-command-cli"

[tool.poetry.scripts]
ecs-connect-cli = "ecs_connect_cli.main:app"

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.26.13"
typer = {version = "^0.9.0", extras = ["all"]}
pytest = "^6.2.4"
echoprompt = "^0.2.0"
deepdiff = "^6.7.1"


[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
pattern = "^((?P<epoch>\\d+)!)?(?P<base>\\d+(\\.\\d+)*)"
latest-tag = true
strict = true

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"
